--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,8 +1,8 @@
-name: hello-world-githubactions
+name: My first github action
 on: [push]
 jobs:
     print-hello-world:
-        runs: ubuntu-latest
+        runs-on: ubuntu-latest
         steps:
             -run: echo "Hello World!!"
             -run: echo "this is step 2"
