--- a/.github/workflows/test.yml
+++ b/.github/workflows/test.yml
@@ -1,10 +1,8 @@
---- 
-jobs: 
-  print-hello-world: 
-    runs-on: ubuntu-latest
-    steps: 
-      ? "-run"
-      : "echo \"this is step 2\""
-name: "My first github action"
-true: 
-  - push
+name: My first github action
+on: [push]
+jobs:
+    print-hello-world:
+        runs-on: ubuntu-latest
+        steps:
+            -run: echo "Hello World!!"
+            -run: echo "this is step 2"
